[package]
name = "aliyun-ddns"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "=1.27.0", features = ["full"] }
tokio-util = {version = "=0.7.7", features = ["full"]}
tokio-stream = { version = "=0.1.12", features = ["sync"] }
# tokio-rustls = "=0.24.0"



futures="=0.3.15"
anyhow = "=1.0.66"
bytes = "=1.1.0"


reqwest = "=0.11.18"
tracing = "=0.1.37"
tracing-subscriber = {version = "=0.3.17", features = ["local-time", "env-filter"]}
# tracing = { version = "=0.1.26", features = ["max_level_trace", "release_max_level_debug"] }
# tracing-subscriber = "=0.2.23" 

serde = {version = "=1.0.126", features = []}
serde_derive = "=1.0.126"
serde_json = "=1.0.65"

time = {version = "=0.3.21", features = ["formatting", "macros"]}
clap = { version = "=4.1.6", features = ["derive", "env"] }
